--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,12 @@
         android:text="@string/plain_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.116"
+        app:layout_constraintVertical_bias="0.142"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.095"
+        app:layout_constraintHorizontal_bias="0.103"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
@@ -47,17 +47,15 @@
         android:layout_marginEnd="8dp" />
 
     <TextView
-        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/reversed_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.346"
+        app:layout_constraintVertical_bias="0.35"
         android:layout_marginRight="7dp"
         app:layout_constraintRight_toRightOf="@+id/textView"
         android:layout_marginEnd="7dp"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.0" />
 
@@ -91,7 +89,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_alignBaseline="@+id/settings"
         android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="0.854"
+        app:layout_constraintVertical_bias="0.809"
         app:layout_constraintHorizontal_bias="0.129"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp" />
@@ -105,13 +103,41 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.845"
+        app:layout_constraintHorizontal_bias="0.836"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.83"
+        app:layout_constraintVertical_bias="0.787"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="13dp" />
+
+    <CheckBox
+        android:id="@+id/playnormal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="8dp"
+        android:checked="true"
+        style="@style/Widget.AppCompat.CompoundButton.RadioButton"
+        android:text="@string/play_normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.98" />
+
+    <CheckBox
+        android:id="@+id/playreverse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/play_reverse"
+        style="@style/Widget.AppCompat.CompoundButton.RadioButton"
+        app:layout_constraintBaseline_toBaselineOf="@+id/playnormal"
+        android:layout_marginRight="21dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/playnormal"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.891" />
 
 </android.support.constraint.ConstraintLayout>
